package org.example;

public interface CalculateCost {

  double calculateInsurance();
  double calculateConsumption();
 double calculateMaintenanceCost();
}
