package org.example;

public enum CarType {
    GASOLINE,
    DIESEL,
    ELECTRIC
}
