package org.example;

public enum VehicleSize {
    SUBCOMPACT,
    COMPACT,
    MID_SIZE,
    LARGE
}
